<?xml version="1.0" encoding="utf-8"?>
<cn.biggar.biggar.view.RootLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:titleBarTitle="验证登录密码">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <View style="@style/line_view_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/phone" />

            <View
                style="@style/line_view_horizontal"

                android:layout_margin="10dp" />

            <cn.biggar.biggar.view.ClearEditText
                android:id="@+id/edit_login_password"
                style="@style/biggar_editView_style"
                android:layout_marginRight="10dp"
                android:hint="@string/str_edit_pass"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/line_view_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/password_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:text="@string/login_password_tip"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/next_button_tv"
        style="@style/biggar_one_button_style"
        android:background="@drawable/shape_rad_border_gray_white"
        android:text="@string/str_next_step"
        android:textColor="@color/app_text_color_g" />
</cn.biggar.biggar.view.RootLayout>