<?xml version="1.0" encoding="utf-8"?>
<cn.biggar.biggar.view.RootLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:titleBarTitle="关于我们">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@mipmap/about_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_about_content"
            android:textColor="@color/app_text_color_z"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="10dp"
            android:text=" 比格客服QQ：2012965589 \n 比格新浪微博：@威朋-比格 \n 比格官方微信：比格"
            android:textColor="@color/app_text_color_z"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/str_about_bottom_content_01"
        android:textColor="@color/app_text_color_q"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/str_about_bottom_content_02"
        android:textColor="@color/app_text_color_q"
        android:textSize="12sp" />

</cn.biggar.biggar.view.RootLayout>