<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/binding_new_phone_hint_tv"
        style="@style/biggar_textview_01_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="请输入需要绑定的手机号" />

    <View style="@style/line_view_vertical" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/email" />

        <cn.biggar.biggar.view.ClearEditText

            android:id="@+id/edit_code_ev"
            style="@style/biggar_editView_style"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/str_edit_code" />
        <TextView
            android:id="@+id/get_code_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimary" />
        <TextView
            android:id="@+id/get_binding_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/registation_have_phone_code"
            android:textColor="@color/app_text_color_z"
            android:textSize="12sp" />
    </LinearLayout>

    <View style="@style/line_view_vertical" />
    <TextView
        android:id="@+id/commit_button_tv"
        style="@style/biggar_one_button_style"
        android:background="@drawable/shape_rad_border_gray_white"
        android:textColor="@color/app_text_color_g"
        android:text="@string/str_commit"
        />
</LinearLayout>