<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/app_white"
        android:orientation="horizontal"
        android:weightSum="5">

        <RelativeLayout
            android:id="@+id/brand_shop_recommend_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/brand_shop_tab_a"
                style="@style/brand_tv_6"
                android:text="@string/tv_recommend" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/brand_shop_sales_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/brand_shop_tab_b"
                style="@style/brand_tv_6"
                android:text="@string/tv_sales" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/brand_shop_new_product_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/brand_shop_tab_c"
                style="@style/brand_tv_6"
                android:text="@string/tv_new_product" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/brand_shop_price_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/brand_shop_tab_d"
                style="@style/brand_tv_6"
                android:text="@string/tv_price" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/brand_shop_tab_d"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/brand_shop_price_rise"
                    style="@style/wh_ww"
                    android:layout_marginBottom="3dp"
                    android:src="@mipmap/rise" />

                <ImageView
                    android:id="@+id/brand_shop_price_fall"
                    style="@style/wh_ww"
                    android:src="@mipmap/fall" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/brand_shop_switch_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/brand_shop_state_iv"
                style="@style/wh_ww"
                android:layout_centerInParent="true"
                android:src="@mipmap/list_style" />
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/line_view_vertical" />

    <FrameLayout
        android:id="@+id/brand_shop_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>