<?xml version="1.0" encoding="utf-8"?>
<cn.biggar.biggar.view.RootLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:titleBarTitle="手机号注册">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout

            android:id="@+id/input_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="65dp">

            <View style="@style/line_view_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_mobile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="+86"
                    android:textColor="@color/app_loading" />

                <cn.biggar.biggar.view.ClearEditText
                    android:id="@+id/mobile_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:hint="@string/regist_phone_number_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color_z"
                    android:textColorHint="@color/app_text_color_q"
                    android:textSize="14sp" />
            </LinearLayout>


            <View style="@style/line_view_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_key"
                    android:drawablePadding="10dp"
                    android:hint="@string/registation_phone_code"
                    android:inputType="number"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color_z"
                    android:textColorHint="@color/app_text_color_q"
                    android:textSize="14sp"

                    />

                <TextView
                    android:id="@+id/get_code_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/get_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registation_have_phone_code"
                    android:textColor="@color/app_text_color_z"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/line_view_vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <cn.biggar.biggar.view.ClearEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_pwd"
                    android:drawablePadding="10dp"
                    android:hint="@string/registation_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color_z"
                    android:textColorHint="@color/app_text_color_q"
                    android:textSize="14sp" />

            </LinearLayout>

            <View style="@style/line_view_vertical" />
        </LinearLayout>

        <TextView
            android:id="@+id/regist_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/input_ll"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_rad_border_gray_white"
            android:gravity="center"
            android:text="@string/str_next_step"
            android:textColor="@color/app_text_color_g"
            android:textSize="17sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/regist_view"
            android:orientation="horizontal">

        </LinearLayout>
    </RelativeLayout>
</cn.biggar.biggar.view.RootLayout>